--- a/src/assets/i18n/en.json
+++ b/src/assets/i18n/en.json
@@ -28,6 +28,28 @@
   "DASH_CATEGORIES_TITLE": "Categories",
   "DASH_CATEGORIES_DESC": "Manage your category details here",
 
+  "DASH_POST_TITLE": "Post",
+  "DASH_POST_DESC": "Manage your post details here",
+
+  "BLOG_POSTS_TITLE": "All Blog Posts",
+  "BLOG_POSTS_SUBTITLE": "Manage and organize your blog posts here.",
+  "ADD_NEW_POST": "Add New Post",
+  "BACK_TO_DASHBOARD": "Back to Dashboard",
+
+  "ADD_NEW_POST_SUBTITLE": "Create and publish a new blog post below.",
+  "POST_TITLE": "Post Title",
+  "POST_TITLE_PLACEHOLDER": "Enter your post title...",
+  "POST_PERMALINK": "Permalink",
+  "POST_PERMALINK_PLACEHOLDER": "URL-friendly name for the post",
+  "POST_EXCERPT": "Excerpt",
+  "POST_EXCERPT_PLACEHOLDER": "Short summary of your post...",
+  "POST_CATEGORY": "Post Category",
+  "POST_CATEGORY_SELECT": "Select a category",
+  "POST_IMAGE": "Feature Image",
+  "POST_CONTENT": "Content",
+  "SAVE_POST": "Save Post",
+  "BACK_TO_POSTS": "Back to Posts",
+
   "SITE_LOGO": "Sourav's Blog",
   "FOOTER_COPYRIGHT": "Copyright © 2026 Angular Blog Website.",
   "HEADER_WORKS": "Header works!"
