feat(posts): integrate Firebase Firestore to load all posts on UI

--- a/src/assets/i18n/en.json
+++ b/src/assets/i18n/en.json
@@ -10,11 +10,12 @@
   "CANCEL": "Cancel",
 
   "NO": "No",
-  "CATEGORY_NAME": "Category Name",
+  "CATEGORY_NAME": "Name",
   "DATE": "Date",
   "ACTIONS": "Actions",
   "CATEGORY_LIST": "Category List",
   "NO_CATEGORY": "No categories added yet.",
+  "NO_POSTS": "No post added yet.",
 
   "EDIT": "Edit",
   "DELETE": "Delete",
@@ -37,16 +38,17 @@
   "BACK_TO_DASHBOARD": "Back to Dashboard",
 
   "ADD_NEW_POST_SUBTITLE": "Create and publish a new blog post below.",
-  "POST_TITLE": "Post Title",
+  "POST_TITLE": "Title",
   "POST_TITLE_PLACEHOLDER": "Enter your post title...",
   "POST_PERMALINK": "Permalink",
   "POST_PERMALINK_PLACEHOLDER": "URL-friendly name for the post",
   "POST_EXCERPT": "Excerpt",
   "POST_EXCERPT_PLACEHOLDER": "Short summary of your post...",
-  "POST_CATEGORY": "Post Category",
+  "POST_CATEGORY": "Category",
   "POST_CATEGORY_SELECT": "Select a category",
-  "POST_IMAGE": "Feature Image",
+  "POST_IMAGE": "Image",
   "POST_CONTENT": "Content",
+  "POST_LIST": "Post List",
   "SAVE_POST": "Save Post",
   "BACK_TO_POSTS": "Back to Posts",
 
